style: Avoid background being cut-off on mobile

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    background: #bcdee7 url("./assets/bg.jpg") no-repeat center center fixed;
+    background: #bcdee7 url("./assets/bg.jpg");
     background-size: 120% auto;
     position: fixed;
     padding: 0px;
